# printimg-rust

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  flake.nix
.github/workflows/: release.yml
src/: cli.rs  main.rs  output.rs  resize.rs
src/output/: cv.rs  img.rs  mod.rs
src/util/: unix.rs  windows.rs
