# cargo-features = ["strip"]

[package]
name = "printimg"
version = "0.3.0"
authors = ["Ryota Okimatsu <oza6ut0ne@gmail.com>"]
description = "Print an imgae or a video in terminal."
license = "MIT OR Apache-2.0"
repository = "https://github.com/oza6ut0ne/printimg-rust"
categories = ["command-line-utilities", "multimedia::images", "multimedia::video"]
keywords = ["terminal", "opencv"]
readme = "README.md"
edition = "2018"

[profile.release]
# strip = "symbols"

[[bin]]
name = "printi"
path = "src/main.rs"

[features]
opencv-32 = []

[dependencies]
anyhow = "1.0.32"
crossterm = "0.19.0"
ctrlc = "3.1.5"
libc = "0.2.73"
opencv = "0.53.1"
