[package]
name = "printimg"
version = "0.5.3"
authors = ["Ryota Okimatsu <oza6ut0ne@gmail.com>"]
description = "Print an image or a video in terminal."
license = "MIT OR Apache-2.0"
repository = "https://github.com/oza6ut0ne/printimg-rust"
categories = ["command-line-utilities", "multimedia::images", "multimedia::video", "visualization"]
keywords = ["terminal", "opencv"]
readme = "README.md"
edition = "2021"

[profile.release]
strip = "symbols"
opt-level = 3
lto = true
codegen-units = 1

[[bin]]
name = "printi"
path = "src/main.rs"

[features]
default = ["libc", "opencv"]
opencv-32 = []

[dependencies]
anyhow = "1.0.32"
clap = { version = "3.1.2", features = ["derive"] }
crossterm = "0.19.0"
ctrlc = "3.1.5"
image = { version = "0.23.14", optional = true }
libc = { version = "0.2.73", optional = true }
opencv = { version = "0.61.0", optional = true }
